# UnVault

./: .gitignore  CLAUDE.md  README.md  analysis_options.yaml  build.yaml  flutter_rust_bridge.yaml  l10n.yaml  pubspec.yaml  以太坊钱包UnVault技术规范文档.md
.claude/rules/: ci-workflows.md  ffi-boundary.md  platform-security.md  pr-checklist.md  security-crypto.md  testing-flutter.md  testing-rust.md  transaction-safety.md
android/app/: build.gradle.kts
docs/changelog/: 2026-03-04-101901-core-wallet-mvp.md  2026-03-04-131600-phase2-transfer-balance-accounts.md  2026-03-04-161500-cargokit-integration.md
docs/plans/: 2026-03-03-core-wallet-mvp.md  2026-03-03-flutter-scaffold-design.md  2026-03-03-flutter-scaffold.md  2026-03-04-phase2-transfer-balance-accounts.md
integration_test/: send_flow_test.dart  simple_test.dart  wallet_creation_test.dart
ios/Runner/: AppDelegate.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: CLAUDE.md  app.dart  main.dart
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
prototype/: pencil-UnVault产品原型.pen
rust/: CLAUDE.md  Cargo.toml  README.md  rustfmt.toml
rust/benches/: argon2_bench.rs
rust/src/: error.rs  frb_generated.rs  lib.rs
rust/src/api/: address_api.rs  crypto_api.rs  mod.rs  transaction_api.rs  wallet_api.rs
rust/src/crypto/: argon2.rs  encryption.rs  key_derivation.rs  memory.rs  mnemonic.rs  mod.rs
rust/src/models/: mod.rs
rust/src/transaction/: builder.rs  mod.rs  signer.rs
rust/src/wallet/: manager.rs
rust/tests/: crypto_integration.rs
rust/tests/common/: mod.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
test/mocks/: mocks.dart
(+167 files in other folders)
