[package]
name = "unvault-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Cryptographic core for UnVault Ethereum HD wallet"

[lib]
crate-type = ["staticlib", "cdylib", "lib"]

[dependencies]
# FFI bridge (optional, only needed when building with Flutter)
flutter_rust_bridge = { version = "=2.11.1", optional = true }

# Ethereum primitives (lightweight: Address with EIP-55)
alloy-primitives = "1.1"

# Ethereum transaction types and signing
alloy-consensus = "1"
alloy-network = "1"
alloy-signer = "1"
alloy-signer-local = "1"
k256 = { version = "0.13", features = ["ecdsa"] }

# BIP standards (coins ecosystem, compatible with alloy internals)
coins-bip32 = { version = "0.12", default-features = false }
coins-bip39 = { version = "0.12", default-features = false, features = ["english"] }

# Cryptography
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"

# Memory safety
zeroize = { version = "1", features = ["derive"] }
secrecy = "0.10"
libc = "0.2"

# Serialization (required by alloy-consensus)
serde = { version = "1", features = ["derive"] }

# Error handling
thiserror = "1"

[dev-dependencies]
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1", features = ["rt", "macros"] }
hex = "0.4"

[features]
default = ["ffi"]
ffi = ["flutter_rust_bridge"]
flutter_rust_bridge = ["dep:flutter_rust_bridge"]

[[bench]]
name = "argon2_bench"
harness = false

[lints.rust]
# frb_expand is an internal flutter_rust_bridge cfg key used during codegen
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(frb_expand)'] }
